# haskell-sudoku

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  stack.yaml  sudoku.cabal
.github/workflows/: haskell.yml
app/: Main.hs
data/: easy.sudoku  expert.sudoku  hard.sudoku  medium.sudoku
src/: Sudoku.hs
test/: SudokuSpec.hs
