cabal-version:       >=1.10

name:                 sudoku
version:              0.1.0
synopsis:             simple sudoku solver by Richard Bird
description:          A simple sudoku solver from Richard Bird.
license:              GPL-3
license-file:         LICENSE
author:               Frank Jung
maintainer:           frankhjung@linux.com
copyright:            Copyright © 2021 Frank H Jung
category:             Education
build-type:           Simple
extra-source-files:   CHANGELOG.md
                    , README.md

source-repository head
  type:             git
  location:         git@gitlab.com:frankhjung1/haskell-sudoku.git

library
  exposed-modules:    Sudoku
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:      base >= 4.13 && < 4.14

executable sudoku
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base >= 4.13 && < 4.14
                    , sudoku
  default-language:   Haskell2010

test-suite            test
  main-is:            TestsSpec.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  type:               exitcode-stdio-1.0
  build-depends:      base
                    , hspec >= 2.7.1 && < 2.8
                    , sudoku
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      SudokuSpec
