cabal-version:      3.0
name:               sudoku
version:            0.3.2
synopsis:           simple sudoku solver by Richard Bird
description:        A simple sudoku solver from Richard Bird.
license:            GPL-3.0-only
license-file:       LICENSE
author:             Frank Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2021-2023 Frank H Jung
category:           Education
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: git@gitlab.com:frankhjung1/haskell-sudoku.git

executable sudoku
  main-is:          Main.hs
  hs-source-dirs:   app src
  default-language: Haskell2010
  autogen-modules:  Paths_sudoku
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Paths_sudoku
    Sudoku

  build-depends:
    , base
    , sudoku

library
  exposed-modules:  Sudoku
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:    base ^>=4.17

test-suite test
  main-is:            TestsSpec.hs
  hs-source-dirs:     test src
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  type:               exitcode-stdio-1.0
  other-modules:
    Sudoku
    SudokuSpec

  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , base
    , hspec
    , sudoku
